# 42_RAG

./: .gitignore  Makefile  README.md  pyproject.toml  ratm.py
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  vocab.index.json
data/raw/: README.md
project_management/: specifications.md  test_plan.md
src/: DataModels.py  __init__.py  index.py
src/models/: DataModels.py
