[project]
name = "42-rag"
version = "0.1.0"
description = "Retrivial-Augmented Generation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "pydantic>=2.13.4",
    "stemmer>=0.0.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]
